[FIX] Fixed unnecessary code in footer container causing content to spill on landscape view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ body {
     position: fixed;
     bottom: 1vh;
     left: 3vw;
-    max-height: 10vh;
 }
 
 .modal-container {
